--- a/src/app/pages/organization/empupload/empupload.html
+++ b/src/app/pages/organization/empupload/empupload.html
@@ -51,6 +51,29 @@
                         </div>
                     </div>
                     <div class="col-md-9">
+                        <div ng-hide="tabCtrl.gridOptions.data.length > 0 && tabCtrl.showPreview">
+                            <h5>Supported Formats</h5>
+                            <p>
+                                You can import up to 1000 records through an .xls, .xlsx file. Please use a .csv file if you're importing more than 1000
+                                records at once.
+                            </p>
+                            <h5>Maximum Limits</h5>
+                            <p>1000 per batch.</p>
+                            <h5>Important Notes</h5>
+
+                            <p>Rudra will map the first row of cells to the corresponding fields. (These values are for reference
+                                and will not be imported.)</p>
+                            <p>File size cannot exceed 5 MB.</p>
+                            <p>All duplicate records will be ignored when importing.</p>
+                            <p>Checkbox value should be 1 or 0.</p>
+                            <p>Dates must be in the format MM/DD/YYYY. Records that use other date formats will be ignored.</p>
+                            <p>Date and time values must be in the following format: MM/DD/YYYY hh:mm:ss. Any other format will
+                                be ignored.</p>
+                            <p>By default, the character encoding is UTF-8 (Unicode). Make sure you provide the correct character
+                                encoding if your import file has special characters.</p>
+                            <p>We recommend doing a test import with a sample file before importing your actual data.</p>
+
+                        </div>
                         <span ng-show="tabCtrl.gridOptions.data.length > 0 && tabCtrl.showPreview">Preview Data</span>
                         <div id="grid1" ui-grid="tabCtrl.gridOptions" class="grid" ui-grid-pagination ui-grid-edit ui-grid-cellnav ng-show="tabCtrl.gridOptions.data.length > 0 && tabCtrl.showPreview">
                         </div>
@@ -68,10 +91,10 @@
                         <table class="table">
                             <thead>
                                 <tr>
-                                    <th class="padT8 padB8 col-sm-2" style="padding-left:10px; text-align: left">Rudra Field</th>
-                                    <th>Import Column</th>
-                                    <th>Rudra Field</th>
-                                    <th>Import Column</th>
+                                    <th class="font-bold" style="padding-left:10px; text-align: left">Rudra Field</th>
+                                    <th class="font-bold">Import Column</th>
+                                    <th class="font-bold">Rudra Field</th>
+                                    <th class="font-bold">Import Column</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -116,11 +139,36 @@
                     </div>
                 </div>
 
-                <h4 class="pad10A text-black">The following columns are maped with CRM Fields</h4>
-                <div class="content-box">
-                    <span class="content-box-header bg-blue-alt">
-                        Mapped Column
-                    </span>
+                <h4 class="pad10A text-black">The following columns are maped with Rudra Fields</h4>
+                <div class="panel" ng-repeat="table in tabCtrl.migrate.tables">
+                    <div class="panel-heading">
+                        {{table.title}}
+                    </div>
+                    <div class="panel-body">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th class="font-bold" style="padding-left:10px; text-align: left">Rudra Field</th>
+                                    <th class="font-bold">Import Column</th>
+                                    <th class="font-bold">Rudra Field</th>
+                                    <th class="font-bold">Import Column</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="field in table.rows">
+                                    <tr ng-repeat="row in  table.rows">
+                                        <td class="padT8 padB8 col-sm-2" style="padding-left:10px; text-align: left">{{row.column1.text}}</td>
+                                        <td style="padding-top: 8px; padding-bottom: 8px; padding-right: 20px;" ng-class="{'font-red': (row.column1.value!='none')}">{{row.column1.value}}</td>
+                                        <td class="col-sm-2" style="padding-top: 8px; padding-bottom: 8px">{{row.column2.text}}</td>
+                                        <td style="padding-top: 8px; padding-bottom: 8px" ng-class="{'font-red': (row.column2.value!='none')}">{{row.column2.value}}</td>
+                                    </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <!--<div class="content-box">
+                   
                     <div class="content-box-wrapper">
                         <table class="table" ng-repeat="table in tabCtrl.migrate.tables">
                             <caption>{{table.title}}</caption>
@@ -142,13 +190,14 @@
                             </tbody>
                         </table>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div id="step4" ng-show="tabCtrl.migrate.step4">
                 <div class="content-box">
                     <h3 class="content-box-header bg-blue-alt">
                         Validate Data
                     </h3>
+                    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
                     <div class="content-box-wrapper">
                         <div id="grid1" ui-grid="tabCtrl.gridValidOptions" class="grid-valid" ui-grid-pagination ui-grid-edit ui-grid-cellnav ng-show="tabCtrl.gridValidOptions.data.length > 0">
                         </div>
@@ -158,14 +207,15 @@
             <div class="row" ng-hide="tabCtrl.migrate.step1">
                 <div class="col-md-12">
                     <button type="button" ng-click="tabCtrl.goPrevious()" class="btn btn-default">
-                                    Previous
-                                </button>
+                        Previous
+                    </button>
                     <button type="button" ng-click="tabCtrl.gridOptions.data=[]" class="btn btn-default">
-                                    Cancel
-                                </button>
+                        Cancel
+                    </button>
                     <button type="button" ng-click="tabCtrl.nextDataUpload()" class="btn btn-info">
-                                    Next
-                                </button>
+                       {{(tabCtrl.migrate.step3)?"Import":"Next"}}
+                    </button>
+
                 </div>
             </div>
         </uib-tab>
@@ -245,166 +295,3 @@
         }
     }
 </style>
-
-<div ba-panel ba-panel-class="xmedium-panel" ba-panel-title="Upload Employee">
-    <div ng-cloak>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="row">
-                    <ul>
-                        <div class="col-md-6">
-                            <li>
-
-                                <a href="#normal-tabs-1" title="Tab 1">
-                    Import Data
-                </a>
-
-
-                            </li>
-                        </div>
-                        <div class="col-md-6">
-                            <li>
-                                <a href="#normal-tabs-2" title="Tab 2">
-                    Import History
-                </a>
-                            </li>
-                        </div>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-6">
-            </div>
-        </div>
-
-    </div>
-
-    <h3 class="with-line"></h3>
-
-
-    <div id="normal-tabs-1">
-        <h2>Import Data Wizard</h2>
-        <h3 class="with-line"></h3>
-        <div id="step1" ng-show="tabCtrl.migrate.step1">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="schema-form-section row">
-                        <div class="schema-form-section col-xs-12">
-                            <div class="form-group schema-form-text  has-feedback">
-                                <label class="control-label ">
-                                        Choose Your Destination
-                                    </label>
-                                <select chosen class="form-control">
-                                        <option>Employee</option>
-                                        <option>Contact</option>
-                                    </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="schema-form-section row" ng-hide="tabCtrl.gridOptions.data.length > 0">
-                        <div class="schema-form-section col-xs-12">
-                            <div class="form-group schema-form-text  has-feedback">
-                                <label class="control-label ">
-                                        Choose Your File
-                                    </label>
-                                <label class="btn btn-success btn-file">
-                                        Browse
-                                        <input type="file" 
-                                        accept=".xls,.xlsx,.ods"  
-                                        opts="tabCtrl.gridOptions" 
-                                        uploader="tabCtrl.uploader"
-                                        multiple="false" 
-                                        style="display: none;">
-                                    </label>
-                                <label class="">(Only .xls, .xlsx are supported)</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="schema-form-section row" ng-show="tabCtrl.gridOptions.data.length > 0">
-                        <div class="schema-form-section col-xs-12">
-                            <div class="form-group schema-form-text  has-feedback">
-                                <label class="control-label ">
-                                        You have selected {{tabCtrl.gridOptions.data.length}} record file
-                                    </label>
-                                <label class="btn btn-success btn-file">
-                                        Reset
-                                        <input type="button" ng-click="tabCtrl.gridOptions.data=[]" style="display: none;">
-                                </label>
-                                <label class="btn btn-success btn-file">
-                                    Data Preview
-                                    <input type="button" ng-click="tabCtrl.showPreview=true" style="display: none;">
-                                </label>
-                                <label class="">{{tabCtrl.excel.columnDefs.length}}</label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-9">
-                    <div id="grid1" ui-grid="tabCtrl.gridOptions" class="grid" ui-grid-pagination ui-grid-edit ui-grid-cellnav ng-show="tabCtrl.gridOptions.data.length > 0">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <h3 class="with-line"></h3>
-        <div class="row">
-            <div class="col-md-6">
-                <button ng-hide="tabCtrl.migrate.currentStep==3" class="btn btn-primary" ng-click="tabCtrl.nextDataUpload()">Next</button>
-                <button class="btn btn-default" ng-click="tabCtrl.cancelDataUpload()">Back</button>
-                <button ng-show="tabCtrl.migrate.currentStep==3" class="btn btn-primary" ng-click="tabCtrl.importDataUpload()">Import</button>
-
-            </div>
-            <div class="col-md-6">
-                <div class="alert alert-danger" ng-show="tabCtrl.isError">
-                    <i class="glyph-icon icon-times"></i>&nbsp; {{tabCtrl.errorMsg}}
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="normal-tabs-2" ng-show="tabCtrl.normaltabs2">
-        tab 2 content
-        <!--<table class="table" ng-repeat="table in vm.migrate.tables">
-                <caption>{{table.title}}</caption>
-                <thead>
-                    <tr>
-                        <th>CRM Field</th>
-                        <th>File Column</th>
-                        <th>CRM Field</th>
-                        <th>File Column</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="row in  table.rows">
-                        <td class="font-black">{{row.column1.text}}</td>
-                        <td ng-class="{'font-red': (row.column1.value!='none')}">{{row.column1.value}}</td>
-                        <td class="font-black">{{row.column2.text}}</td>
-                        <td ng-class="{'font-red': (row.column2.value!='none')}">{{row.column2.value}}</td>
-                    </tr>
-                </tbody>
-            </table>-->
-        <table class="table" ng-repeat="table in tabCtrl.migrate.tables">
-            <caption>{{table.title}}</caption>
-            <thead>
-                <tr>
-                    <th>CRM Field</th>
-                    <th>File Column</th>
-                    <th>CRM Field</th>
-                    <th>File Column</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="val in table.rows">
-                    <td class="font-black">{{val.column1.text}}</td>
-                    <td>{{val.column1.value}}</td>
-                    <td class="font-black">{{val.column2.text}}</td>
-                    <td ng-class="">{{val.column2.value}}</td>
-
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-</div>
-</div>
-</div>
