--- a/src/app/pages/organization/employee/edit/employeeEdit.html
+++ b/src/app/pages/organization/employee/edit/employeeEdit.html
@@ -1,7 +1,7 @@
 <div class="row mail-client-container transparent">
   <div class="col-md-12">
 
-    <div ba-panel ba-panel-class="tabs-panel">
+    <div ba-panel ba-panel-class="large-panel mail-panel">
       <div class="letter-layout">
         <div class="mail-navigation-container col-md-4" ng-class="{'expanded' : !editCtrl.navigationCollapsed}">
           <div class="text-center">
