--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -33,9 +33,26 @@
     width: 75%;
     // padding-top: 8px;
 }
+
+.filters li{
+  padding-bottom: 15px;
+}
+.filter-box select, .filter-box input
+{
+  border: lightgray solid 1px;
+  margin: 5px 0 0px 5px;
+  width: 90%;
+}
+.filter-panel
+{
+  max-height: 430px;
+  overflow: scroll;
+}
 .djGrid{
   height: 450px;
 }
+
+
 *:focus {
     outline:none !important
 }
